--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,23 +1,3 @@
-aniso8601==3.0.0
-certifi==2018.4.16
-chardet==3.0.4
-click==6.7
-Flask==0.12.2
-Flask-Cors==3.0.3
-Flask-JWT-Extended==3.7.0
-Flask-OAuthlib==0.9.4
-Flask-RESTful==0.3.6
-idna==2.6
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-oauthlib==2.1.0
-peewee==3.0.16
-psycopg2-binary==2.7.4
-PyJWT==1.6.4
-pytz==2018.4
-requests==2.18.4
-requests-oauthlib==0.8.0
-six==1.11.0
-urllib3==1.22
-Werkzeug==0.14.1
+--index-url https://pypi.python.org/simple/
+
+-e .
